[gd_scene load_steps=8 format=3 uid="uid://muge8i3t54oq"]

[ext_resource type="Script" uid="uid://dnnnreklevlh6" path="res://Script/pause_menu.gd" id="1_tuk1o"]
[ext_resource type="Theme" uid="uid://ccoc373wmcfuo" path="res://Assets/Stats_Theme.tres" id="2_wrvdy"]
[ext_resource type="Theme" uid="uid://ojh06q2lrqd" path="res://Assets/SoundSettings Theme.tres" id="3_lv2ct"]
[ext_resource type="Script" uid="uid://bn4418bjysxsc" path="res://Script/Volume_Slider.gd" id="3_wrvdy"]
[ext_resource type="Theme" uid="uid://ccg6e0fetg1ag" path="res://Assets/Main_Menu_Theme.tres" id="4_lv2ct"]
[ext_resource type="Script" uid="uid://bex05e4bxbyc7" path="res://Script/MapSpeedSliders.gd" id="5_4en71"]
[ext_resource type="Script" uid="uid://c0840n7vhiaus" path="res://Script/ShiftMapSpeedSliders.gd" id="6_ruja2"]

[node name="PauseMenu" type="Control" groups=["PauseMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tuk1o")
metadata/_edit_use_anchors_ = true

[node name="PauseDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.914931
anchor_top = -1.35648
anchor_right = 1.91753
anchor_bottom = 2.34414
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="PauseMenuContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
anchor_left = 0.334201
anchor_top = 0.25463
anchor_right = 0.678819
anchor_bottom = 0.807099
offset_top = -1.52588e-05

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer"]
layout_mode = 2
theme = ExtResource("2_wrvdy")
theme_override_constants/separation = 75

[node name="MainMenu" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Resume" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="PauseMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SoundMenuContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0998264
anchor_top = 0.156636
anchor_right = 0.900174
anchor_bottom = 0.843364
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_lv2ct")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SoundMenuContainer"]
layout_mode = 2
theme = ExtResource("4_lv2ct")
theme_override_constants/separation = 23

[node name="SoundsTitle" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Sounds"
horizontal_alignment = 1

[node name="Master" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="VolumeSliderMaster" type="HSlider" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_wrvdy")
bus_Name = "Master"

[node name="Music" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="VolumeSliderMusic" type="HSlider" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_wrvdy")
bus_Name = "Music"

[node name="Sounds" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Volume"
horizontal_alignment = 1

[node name="VolumeSliderSound" type="HSlider" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("3_wrvdy")
bus_Name = "Sound"

[node name="Controls" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "
Controls"
horizontal_alignment = 1

[node name="MapSpeed" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Map Movement Speed"

[node name="MoveSlider" type="HSlider" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
min_value = 100.0
max_value = 2000.0
step = 100.0
value = 1000.0
script = ExtResource("5_4en71")

[node name="MapSpeed2" type="Label" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Shift Speed Multiplier"

[node name="ShiftMoveSlider" type="HSlider" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 3.0
step = 0.1
value = 2.0
script = ExtResource("6_ruja2")

[node name="GoBack" type="Button" parent="SoundMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Go Back"

[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenuContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="drag_ended" from="SoundMenuContainer/VBoxContainer/MoveSlider" to="SoundMenuContainer/VBoxContainer/MoveSlider" method="_on_drag_ended"]
[connection signal="drag_ended" from="SoundMenuContainer/VBoxContainer/ShiftMoveSlider" to="SoundMenuContainer/VBoxContainer/ShiftMoveSlider" method="_on_drag_ended"]
[connection signal="pressed" from="SoundMenuContainer/VBoxContainer/GoBack" to="." method="_on_go_back_pressed"]
